sass/_aesop.scss
div.aesop-content {
	@include site-width;
}

.aesop-component {
    margin: 40px 0;
    display: block;
    &.aesop-audio-component {
        @include site-width;
    }
	&.aesop-image-component {
		margin: 40px 0; // necessary override
	}
	&.aesop-quote-component {
		padding: 60px 0;
        &.aesop-component-align-left,
        &.aesop-component-align-right {
            margin: 10px 30px;
            padding: 20px;
            width: 400px !important;
            @media screen and (max-width: 768px) {
                width: 100% !important;
                margin: 30px 0;
                float: none;
            }
        }
        blockquote {
			color: inherit;
			display: block;
            text-align: center;
            @include rem(font-size, 30px);
            &.aesop-component-align-left {
                text-align: left;
            }
            &.aesop-component-align-right {
                text-align: right;
            }
            &.aesop-component-align-left,
            &.aesop-component-align-right {
                @media screen and (max-width: 768px) {
                    text-align: center;
                    float: none;
                }
            }
			.aesop-quote-component-cite {
				font-size: 80%;
				color: inherit;
				opacity: 0.75;
				display: block;
				margin-top: 15px;
			}
		}
    }
    &.aesop-content-component {
		p {
			color: inherit;
		}
	}
}

.aesop-stacked-img {
	background-attachment: fixed;
	background-position: 50%;
	background-repeat: no-repeat;
	background-size: cover;
	width: 100%;
	left: 0;
	top: 0;
	position: relative;
	overflow: hidden;
	height: 500px; // default height overridden by jquery
}

.aesop-img-enlarge {
    display: none; // do something with this :/
}

.aesop-parallax-sc-caption-wrap {
    background: #333;
    background: rgba(0, 0, 0, 0.8);
    color: #fff;
    font-family: $font-stack-content;
    @include rem(font-size, 16px);
    padding: 10px 20px;
}

// We're already bundling Font Awesome. Might as well use it :D
.aesopicon {
    display: inline-block;
    font-family: FontAwesome;
    font-style: normal;
    font-weight: normal;
    line-height: 1;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    &.aesopicon-search-plus:after {
        content: '\f00e';
    }
}

.aesop-collection-item {
    float: left;
}

.aesop-sequence-img-wrap {
	margin: 0;
	& img {
		display: block;
	}
}

.aesop-image-component-image {
	position: relative;
	.aesop-image-component-caption {
		@include site-width;
		font-style: italic;
		font-family: $font-stack-content;
        @include rem(font-size, 15px);
		i, em {
			font-style: normal;
		}
	}
}

.aesop-article-chapter {
    background-color: #333 !important;
}

.aesop-cover-title {
    @include site-width;
    color: #fff;
    @include rem(font-size, 42px);
    padding: 250px 0 20px;
}

.aesop-video-container {
    max-width: 100%;
}

// override width for top-level aesop components
@each $class in aesop-component, aesop-story-collection {
    .entry-content > .#{$class} {
        max-width: 100%;
        width: 100%;
        &.aesop-audio-component {
            @include site-width;
        }
    }
}

